welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (y=2) {
                     ^